# one-billion-row-challenge

./: .gitignore  Cargo.toml  create_measurements.py  justfile  main.py  result-expected.txt  use-awk.sh
src/: chunked_parallel.rs  chunked_parallel_aligned.rs  compute.rs  main.rs  mmap_parallel.rs  mmap_sequential.rs  read_to_end_parallel.rs  wc.rs
