[package]
name = "one-billion-lines-challenge"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
# panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = { version = "0.8.4", features = ["crossbeam-channel", "crossbeam-queue", "crossbeam-deque"] }
parking_lot = "0.12.1"
rustc-hash = "1.1.0"
smol_str = "0.2.1"
