[package]
name = "one-billion-lines-challenge"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
# panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
# arrayvec = "0.7.4"
# fixed = "1.27.0"
# fnv = "1.0.7"
# fxhash = "0.2.1"
# lazy_static = "1.4.0"
# memmap2 = "0.9.4"
# num_cpus = "1.16.0"
# parking_lot = "0.12.1"
# rayon = "1.10.0"
# smol_str = "0.2.1"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel", "crossbeam-queue", "crossbeam-deque"] }
rustc-hash = "1.1.0"
